--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-text-stream-search",
   "version": "0.0.1",
   "description": "Searches for occurrences of a given search term in Node.js text streams",
-  "main": "index.js",
+  "main": "lib/text-stream-search.js",
   "scripts": {
     "test": "cucumber-js"
   },
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Originate/node-text-stream-search/issues"
   },
-  "homepage": "https://github.com/Originate/node-text-stream-search#readme"
+  "homepage": "https://github.com/Originate/node-text-stream-search#readme",
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "cucumber": "^0.9.2",
+    "livescript": "^1.4.0",
+    "memory-streams": "^0.1.0"
+  }
 }
