--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-text-stream-search",
+  "name": "text-stream-search",
   "version": "0.0.1",
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "main": "lib/text-stream-search.js",
