--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "cucumber": "^0.9.2",
     "livescript": "^1.4.0",
     "memory-streams": "^0.1.0"
+  },
+  "dependencies": {
+    "debug": "^2.2.0"
   }
 }
