--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "lib/text-stream-search.js",
   "scripts": {
     "postpublish": "git push && git push --tags",
-    "postupdate": "npm test",
     "prepublish": "bin/build",
-    "preversion": "npm run update",
-    "test": "cucumber-js",
-    "update": "david update"
+    "preversion": "bin/spec && bin/check-update",
+    "test": "cucumber-js"
   },
   "repository": {
     "type": "git",
