--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "postpublish": "git push && git push --tags",
     "prepublish": "bin/build",
-    "preversion": "bin/spec && bin/check-update",
+    "preversion": "bin/check-update && bin/spec",
     "test": "bin/spec"
   },
   "repository": {
