--- a/package.json
+++ b/package.json
@@ -1,32 +1,30 @@
 {
   "name": "text-stream-search",
   "version": "0.2.0",
+  "author": "Kevin Goslar",
+  "dependencies": {
+    "debug": "^2.2.0",
+    "text-stream-accumulator": "^0.1.0"
+  },
   "description": "Searches for occurrences of a given search term in Node.js text streams",
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "cucumber": "^0.9.2",
+    "dependency-lint": "3.1.2",
+    "livescript": "^1.4.0",
+    "memory-streams": "^0.1.0"
+  },
+  "homepage": "https://github.com/Originate/node-text-stream-search#readme",
+  "license": "ISC",
   "main": "lib/text-stream-search.js",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/Originate/node-text-stream-search.git"
+  },
   "scripts": {
     "postpublish": "git push && git push --tags",
     "prepublish": "bin/build",
     "preversion": "bin/check-update && bin/spec",
     "test": "bin/spec"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/Originate/node-text-stream-search.git"
-  },
-  "author": "Kevin Goslar",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Originate/node-text-stream-search/issues"
-  },
-  "homepage": "https://github.com/Originate/node-text-stream-search#readme",
-  "devDependencies": {
-    "chai": "^3.4.1",
-    "cucumber": "^0.9.2",
-    "livescript": "^1.4.0",
-    "memory-streams": "^0.1.0"
-  },
-  "dependencies": {
-    "debug": "^2.2.0",
-    "text-stream-accumulator": "^0.1.0"
   }
 }
