--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cucumber": "^0.9.2",
     "dependency-lint": "3.1.2",
     "livescript": "^1.4.0",
-    "memory-streams": "^0.1.0"
+    "memory-streams": "^0.1.0",
+    "o-tools": "0.1.4"
   },
   "homepage": "https://github.com/Originate/node-text-stream-search#readme",
   "license": "ISC",
@@ -22,9 +23,7 @@
     "url": "git+ssh://git@github.com/Originate/node-text-stream-search.git"
   },
   "scripts": {
-    "postpublish": "git push && git push --tags",
     "prepublish": "bin/build",
-    "preversion": "bin/check-update && bin/spec",
     "test": "bin/spec"
   }
 }
