--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.2.0",
   "author": "Kevin Goslar",
   "dependencies": {
-    "debug": "^2.2.0",
-    "text-stream-accumulator": "^0.1.0"
+    "debug": "2.2.0",
+    "text-stream-accumulator": "0.1.0"
   },
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
-    "chai": "^3.4.1",
-    "cucumber": "^0.9.2",
+    "chai": "3.4.1",
+    "cucumber": "0.9.2",
     "dependency-lint": "3.1.2",
-    "livescript": "^1.4.0",
-    "memory-streams": "^0.1.0",
+    "livescript": "1.4.0",
+    "memory-streams": "0.1.0",
     "o-tools": "0.1.4"
   },
   "homepage": "https://github.com/Originate/node-text-stream-search#readme",
