Require at least NPM 3.0

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "memory-streams": "0.1.0",
     "o-tools": "0.1.4"
   },
+  "engines": {
+    "npm": ">= 3.0.0"
+  },
   "files": [
     "dist",
     "npm-shrinkwrap.json"
