--- a/circle.yml
+++ b/circle.yml
@@ -12,3 +12,11 @@ test:
   override:
     - bin/lint
     - cucumber-js --format json:$CIRCLE_TEST_REPORTS/cucumber/tests.cucumber --format pretty
+
+
+deployment:
+  publish:
+    branch: release
+    commands:
+      - npm set //registry.npmjs.org/:_authToken $AUTH_TOKEN
+      - npm publish
