--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,7 @@ machine:
 test:
 
   pre:
-    - node_modules/.bin/build
+    - node_modules/o-tools-livescript/bin/build
     - mkdir -p $CIRCLE_TEST_REPORTS/cucumber
 
   override:
