--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "chai": "3.5.0",
     "cucumber": "0.10.3",
+    "cucumber-snippets-livescript": "1.0.1",
     "dependency-lint": "4.0.1",
     "livescript": "1.5.0",
     "memory-streams": "0.1.0",
