--- a/circle.yml
+++ b/circle.yml
@@ -10,7 +10,7 @@ test:
     - mkdir -p $CIRCLE_TEST_REPORTS/cucumber
 
   override:
-    - bin/lint
+    - node_modules/o-tools/bin/lint
     - cucumber-js --format json:$CIRCLE_TEST_REPORTS/cucumber/tests.cucumber --format pretty
 
 
