--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ test:
 
   override:
     - node_modules/o-tools/bin/lint
-    - cucumber-js --format json:$CIRCLE_TEST_REPORTS/cucumber/tests.cucumber --format pretty
+    - cucumber-js --format json:$CIRCLE_TEST_REPORTS/cucumber/tests.cucumber
 
 
 deployment:
