--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ test:
 
 deployment:
   publish:
-    branch: release
+    tag: /v[0-9]+(\.[0-9]+)*/
     commands:
       - npm set //registry.npmjs.org/:_authToken $AUTH_TOKEN
       - npm publish
