--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
+    "@babel/core": "7.0.0-beta.36",
+    "babel-cli": "6.26.0",
+    "babel-preset-flow": "6.23.0",
     "chai": "4.1.2",
     "cucumber": "3.2.0",
     "dependency-lint": "5.0.1",
-    "livescript": "1.5.0",
+    "flow-bin": "0.62.0",
     "memory-streams": "0.1.2",
     "o-tools": "0.8.47",
     "o-tools-livescript": "1.2.3",
