--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Kevin Goslar",
   "dependencies": {
     "debug": "3.1.0",
+    "delay": "2.0.0",
     "text-stream-accumulator": "1.0.0"
   },
   "description": "Searches for occurrences of a given search term in Node.js text streams",
