--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "devDependencies": {
     "@babel/core": "7.0.0-beta.36",
     "babel-cli": "6.26.0",
+    "babel-eslint": "7.2.1",
     "babel-preset-flow": "6.23.0",
     "chai": "4.1.2",
     "cucumber": "3.2.0",
     "dependency-lint": "5.0.1",
+    "eslint-plugin-flowtype": "2.40.1",
     "flow-bin": "0.62.0",
     "memory-streams": "0.1.2",
     "o-tools": "0.8.47",
     "o-tools-livescript": "1.2.3",
-    "wait": "0.1.0"
+    "standard": "10.0.3"
   },
   "engines": {
     "npm": ">= 3.0.0"
@@ -38,5 +40,11 @@
   "scripts": {
     "prepublish": "node_modules/.bin/build",
     "test": "bin/spec"
+  },
+  "standard": {
+    "parser": "babel-eslint",
+    "plugins": [
+      "flowtype"
+    ]
   }
 }
