--- a/bin/build
+++ b/bin/build
@@ -1,6 +1,14 @@
 #!/usr/bin/env bash
-set -e
+set -ex
 
 # Builds the code base
 rm -rf dist
 node_modules/.bin/babel src -d dist -q
+
+# copy flow files
+cd src
+find . -type f -name '*.js' |
+  grep -v 'typedefs' |
+  sed 's/^\.\///' |
+  xargs -L 1 -I 'XXX' cp ../src/XXX ../dist/XXX.flow
+cd ..
