--- a/.flowconfig
+++ b/.flowconfig
@@ -6,7 +6,13 @@
 src/typedefs
 
 [lints]
+all=warn
 
 [options]
+include_warnings=true
+module.ignore_non_literal_requires=true
+module.use_strict=true
+munge_underscores=true
+suppress_comment= \\(.\\|\n\\)*\\$FlowFixMe
 
 [strict]
