--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependency-lint": "5.0.1",
     "eslint-plugin-flowtype": "2.40.1",
     "flow-bin": "0.62.0",
+    "flow-typed": "2.2.3",
     "memory-streams": "0.1.2",
     "o-tools": "0.9.0",
     "standard": "10.0.3",
