--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   },
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
+    "@types/chai": "4.1.4",
+    "@types/cucumber": "4.0.4",
     "@types/debug": "0.0.30",
     "@types/delay": "2.0.1",
     "chai": "4.1.2",
-    "cucumber": "3.2.0",
+    "cucumber": "4.2.1",
     "memory-streams": "0.1.2",
     "o-tools": "0.10.1",
     "standard": "10.0.3",
     "text-runner": "0.1.27",
+    "ts-node": "7.0.0",
     "tslint": "5.11.0",
     "typescript": "2.9.2"
   },
