--- a/tslint.yml
+++ b/tslint.yml
@@ -1,5 +1,6 @@
 extends: "tslint:latest"
 rules:
+  arrow-parens: [true, "ban-single-arg-parens"]
   interface-name: [false]
   member-access: [true, "no-public"]
   semicolon: [true, "never"]
