--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "url": "git+ssh://git@github.com/Originate/node-text-stream-search.git"
   },
   "scripts": {
-    "test": "bin/spec"
+    "test": "make spec"
   },
   "standard": {
     "parser": "babel-eslint",
