--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "es6-promise-inspect": "^1.0.4",
     "memory-streams": "0.1.2",
     "o-tools": "0.10.1",
+    "prettier": "^1.14.2",
     "standard": "10.0.3",
     "text-runner": "0.1.27",
     "ts-node": "7.0.0",
