--- a/tslint.yml
+++ b/tslint.yml
@@ -5,6 +5,7 @@ rules:
   member-access: [true, "no-public"]
   no-implicit-dependencies: [true, "dev"]
   no-unused-variable: false
+  only-arrow-functions: false
   quotemark: [true, "double"]
   semicolon: [true, "never"]
   trailing-comma: [false]
