--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
     "@types/chai": "4.1.7",
-    "@types/chalk": "^2.2.0",
+    "@types/chalk": "2.2.0",
     "@types/cucumber": "4.0.4",
     "@types/debug": "0.0.31",
     "@types/delay": "3.1.0",
     "chai": "4.2.0",
-    "chalk": "^2.4.1",
+    "chalk": "2.4.1",
     "cucumber": "5.0.2",
-    "es6-promise-inspect": "^1.0.4",
+    "es6-promise-inspect": "1.0.4",
     "memory-streams": "0.1.3",
     "o-tools": "0.10.3",
-    "prettier": "^1.15.2",
+    "prettier": "1.15.2",
     "text-runner": "3.5.1",
     "ts-node": "7.0.1",
     "tslint": "5.11.0",
