--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "3.0.1",
   "author": "Kevin Goslar",
   "dependencies": {
-    "delay": "4.3.0",
-    "text-stream-accumulator": "1.3.1"
+    "delay": "4.3.0"
   },
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
@@ -12,10 +11,12 @@
     "@types/chalk": "2.2.0",
     "@types/cucumber": "4.0.6",
     "@types/delay": "3.1.0",
+    "@types/mocha": "5.2.7",
     "chalk": "2.4.2",
     "cucumber": "5.1.0",
     "es6-promise-inspect": "2.0.0",
     "memory-streams": "0.1.3",
+    "mocha": "6.1.4",
     "prettier": "1.18.2",
     "text-runner": "3.6.0",
     "ts-node": "8.3.0",
