--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "text-stream-search",
   "version": "3.0.1",
   "author": "Kevin Goslar",
-  "dependencies": {
-    "delay": "4.3.0"
-  },
+  "dependencies": {},
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
     "@types/chai": "4.1.7",
@@ -14,6 +12,7 @@
     "@types/mocha": "5.2.7",
     "chalk": "2.4.2",
     "cucumber": "5.1.0",
+    "delay": "4.3.0",
     "es6-promise-inspect": "2.0.0",
     "memory-streams": "0.1.3",
     "mocha": "6.1.4",
