--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "dependencies": {},
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "0.1.3",
     "@types/chai": "4.1.7",
     "@types/delay": "3.1.0",
     "@types/mocha": "5.2.7",
+    "coveralls": "3.0.5",
     "delay": "4.3.0",
     "memory-streams": "0.1.3",
     "mocha": "6.1.4",
+    "nyc": "14.1.1",
     "prettier": "1.18.2",
+    "source-map-support": "0.5.12",
     "text-runner": "3.6.0",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
