--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "coveralls": "3.0.5",
     "delay": "4.3.0",
     "memory-streams": "0.1.3",
-    "mocha": "6.1.4",
+    "mocha": "6.2.0",
     "nyc": "14.1.1",
     "prettier": "1.18.2",
-    "source-map-support": "0.5.12",
-    "text-runner": "3.6.0",
+    "source-map-support": "0.5.13",
+    "text-runner": "4.0.0-beta.0",
     "ts-node": "8.3.0",
     "tslint": "5.18.0",
     "typescript": "3.5.3"
