--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "0.1.3",
-    "@types/chai": "4.1.7",
+    "@types/chai": "4.2.5",
     "@types/mocha": "5.2.7",
-    "coveralls": "3.0.5",
+    "coveralls": "3.0.7",
     "delay": "4.3.0",
     "memory-streams": "0.1.3",
-    "mocha": "6.2.0",
+    "mocha": "6.2.2",
     "nyc": "14.1.1",
-    "prettier": "1.18.2",
-    "source-map-support": "0.5.13",
-    "text-runner": "4.0.0-beta.0",
-    "ts-node": "8.3.0",
-    "tslint": "5.18.0",
-    "typescript": "3.5.3"
+    "prettier": "1.19.1",
+    "source-map-support": "0.5.16",
+    "text-runner": "4.0.0",
+    "ts-node": "8.5.2",
+    "tslint": "5.20.1",
+    "typescript": "3.7.2"
   },
   "files": [
     "dist"
