--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "@istanbuljs/nyc-config-typescript": "1.0.1",
     "@types/chai": "4.2.12",
     "@types/mocha": "8.0.3",
+    "@typescript-eslint/eslint-plugin": "4.5.0",
+    "@typescript-eslint/parser": "4.5.0",
     "coveralls": "3.1.0",
+    "eslint": "7.12.0",
+    "eslint-config-prettier": "6.14.0",
+    "eslint-plugin-simple-import-sort": "5.0.3",
+    "eslint-plugin-typescript-sort-keys": "1.5.0",
     "memory-streams": "0.1.3",
     "mocha": "8.1.1",
     "nyc": "15.1.0",
@@ -16,7 +22,6 @@
     "source-map-support": "0.5.19",
     "text-runner": "4.0.3",
     "ts-node": "8.10.2",
-    "tslint": "6.1.3",
     "typescript": "3.9.7"
   },
   "files": [
