--- a/package.json
+++ b/package.json
@@ -6,23 +6,24 @@
   "description": "Searches for occurrences of a given search term in Node.js text streams",
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.1",
-    "@types/chai": "4.2.12",
-    "@types/mocha": "8.0.3",
-    "@typescript-eslint/eslint-plugin": "4.5.0",
-    "@typescript-eslint/parser": "4.5.0",
+    "@types/chai": "4.2.18",
+    "@types/mocha": "8.2.2",
+    "@typescript-eslint/eslint-plugin": "4.27.0",
+    "@typescript-eslint/parser": "4.27.0",
     "coveralls": "3.1.0",
-    "eslint": "7.12.0",
-    "eslint-config-prettier": "6.14.0",
-    "eslint-plugin-simple-import-sort": "5.0.3",
-    "eslint-plugin-typescript-sort-keys": "1.5.0",
+    "eslint": "7.28.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "eslint-plugin-typescript-sort-keys": "1.6.0",
     "memory-streams": "0.1.3",
-    "mocha": "8.1.1",
+    "mocha": "9.0.0",
     "nyc": "15.1.0",
-    "prettier": "2.0.5",
+    "prettier": "2.3.1",
     "source-map-support": "0.5.19",
-    "text-runner": "4.0.3",
-    "ts-node": "8.10.2",
-    "typescript": "3.9.7"
+    "text-runner": "5.0.0",
+    "textrun-make": "0.1.0",
+    "ts-node": "10.0.0",
+    "typescript": "4.3.2"
   },
   "files": [
     "dist"
