--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "mocha": "10.0.0",
     "nyc": "15.1.0",
     "prettier": "2.7.1",
-    "sort-package-json": "1.57.0",
+    "prettier-plugin-packagejson": "2.2.18",
     "source-map-support": "0.5.21",
     "text-runner": "5.0.1",
     "textrun-make": "0.1.1",
