--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,11 +6,13 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
-    "plugin:typescript-sort-keys/recommended"
+    "plugin:typescript-sort-keys/recommended",
+    "plugin:import/recommended",
+    "plugin:import/typescript",
+    "prettier"
   ],
   "rules": {
-    "simple-import-sort/imports": "error",
-    "simple-import-sort/exports": "error"
+    "import/order": ["error", { "alphabetize": { "order": "asc" } }]
   },
   "parserOptions": {
     "project": "./tsconfig.json"
