verify-make-command.ts tsconfig-build.json tsconfig.json

--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -2,5 +2,5 @@
 // tests are type-checked and compiled when running the unit tests
 {
   "extends": "./tsconfig.json",
-  "exclude": ["./test"]
+  "exclude": ["./test", "./text-run"]
 }
