Convert TextRun script to TypeScript (#123)

--- a/tsconfig-build.json
+++ b/tsconfig-build.json
@@ -1,6 +1,4 @@
-// configuration for the compiler: ignore tests for increased speed
-// tests are type-checked and compiled when running the unit tests
 {
   "extends": "./tsconfig.json",
-  "exclude": ["./test"]
+  "exclude": ["./test", "./text-run"]
 }
