--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*.ts", "test/*.ts"],
+  "include": ["src/**/*.ts", "test/*.ts", "text-run/*.ts"],
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
