--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.1",
     "@types/mocha": "9.1.1",
+    "@types/node": "18.6.1",
     "@typescript-eslint/eslint-plugin": "5.31.0",
     "@typescript-eslint/parser": "5.31.0",
     "coveralls": "3.1.1",
