--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["src/**/*.ts", "test/*.ts", "text-run/*.ts"],
   "compilerOptions": {
     "target": "es2017",
-    "module": "commonjs",
+    "module": "Node16",
     "declaration": true /* Generate .d.ts files from TypeScript and JavaScript files in your project. */,
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
     "sourceMap": true /* Create source map files for emitted JavaScript files. */,
