--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,9 +12,20 @@
     "prettier"
   ],
   "rules": {
-    "import/order": ["error", { "alphabetize": { "order": "asc" } }]
+    "import/order": ["error", { "alphabetize": { "order": "asc" } }],
+    "import/no-unresolved": "error"
   },
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts"]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
+      }
+    }
   }
 }
