--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "coveralls": "3.1.1",
     "eslint": "8.20.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
     "memory-streams": "0.1.3",
