--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "ISC",
   "author": "Kevin Goslar",
+  "type": "module",
   "main": "dist/text-stream-search.js",
   "files": [
     "dist"
@@ -28,6 +29,7 @@
     "coveralls": "3.1.1",
     "eslint": "8.20.0",
     "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "3.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-typescript-sort-keys": "2.1.0",
     "memory-streams": "0.1.3",
@@ -36,8 +38,8 @@
     "prettier": "2.7.1",
     "prettier-plugin-packagejson": "2.2.18",
     "source-map-support": "0.5.21",
-    "text-runner": "5.0.1",
-    "textrun-make": "0.1.1",
+    "text-runner": "6.0.0",
+    "textrun-make": "0.2.0",
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
   }
