--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "author": "Kevin Goslar",
   "type": "module",
-  "main": "dist/text-stream-search.js",
+  "exports": "./dist/text-stream-search.js",
   "files": [
     "dist"
   ],
