--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('yarn.lock') }}
-      - run: yarn
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+      - run: npm install
         if: steps.cache-node.outputs.cache-hit != 'true'
       - run: echo "./node_modules/.bin" >> "$GITHUB_PATH"
       - run: make test
