--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "prepublishOnly": "make build",
     "test": "make spec"
   },
-  "dependencies": {},
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.3",
@@ -34,6 +33,7 @@
     "eslint-plugin-typescript-sort-keys": "2.1.0",
     "memory-streams": "0.1.3",
     "mocha": "10.0.0",
+    "npm-check-updates": "17.1.15",
     "nyc": "15.1.0",
     "prettier": "2.7.1",
     "prettier-plugin-packagejson": "2.2.18",
