--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "dist"
   ],
   "scripts": {
+    "clean": "rm -rf dist",
+    "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
+    "docs": "text-run --offline --format=dot",
+    "fix": "prettier --write . && eslint --ext=.ts --fix .",
+    "lint": "eslint --ext=.ts . && prettier --check . && tsc --noEmit && tools/actionlint",
     "prepublishOnly": "make build",
-    "test": "make spec"
+    "test": "tsc make spec"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
