--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
       - run: npm install
         if: steps.cache-node.outputs.cache-hit != 'true'
       - run: echo "./node_modules/.bin" >> "$GITHUB_PATH"
-      - run: make test
+      - run: npm run test
