--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
     "docs": "text-run --offline --format=dot",
     "fix": "dprint fmt && eslint --ext=.ts --fix .",
-    "lint": "eslint --ext=.ts . && dprint check . && tsc --noEmit && tools/actionlint",
+    "lint": "eslint --ext=.ts . && dprint check && tsc --noEmit && tools/actionlint",
     "prepublishOnly": "npm run build",
     "setup": "curl -s https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash | bash && mkdir -p tools && mv actionlint tools",
     "test": "npm run build && npm run lint && npm run unit && npm run docs",
