--- a/package.json
+++ b/package.json
@@ -15,8 +15,17 @@
     "dist"
   ],
   "scripts": {
-    "prepublishOnly": "make build",
-    "test": "make spec"
+    "build": "tsc -p tsconfig-build.json",
+    "clean": "rm -rf dist",
+    "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
+    "docs": "text-run --offline --format=dot",
+    "fix": "dprint fmt && eslint --ext=.ts --fix .",
+    "lint": "eslint --ext=.ts . && dprint check && tsc --noEmit && tools/actionlint",
+    "prepublishOnly": "npm run build",
+    "setup": "curl -s https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash | bash && mkdir -p tools && mv actionlint tools",
+    "test": "npm run build && npm run lint && npm run unit && npm run docs",
+    "unit": "mocha --reporter dot test/*.ts",
+    "update": "npm-check-updates -u && npm install"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.2",
@@ -40,7 +49,7 @@
     "prettier-plugin-packagejson": "2.2.18",
     "source-map-support": "0.5.21",
     "text-runner": "6.0.0",
-    "textrun-make": "0.2.0",
+    "textrun-npm": "0.3.0",
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
   }
