--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "tsc -p tsconfig-build.json",
     "clean": "rm -rf dist",
     "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
-    "docs": "text-run --offline --format=dot",
+    "docs": "text-runner --offline --format=dot",
     "fix": "dprint fmt && eslint --ext=.ts --fix .",
     "lint": "eslint --ext=.ts . && dprint check && tsc --noEmit && tools/actionlint",
     "prepublishOnly": "npm run build",
@@ -48,7 +48,7 @@
     "prettier": "2.7.1",
     "prettier-plugin-packagejson": "2.2.18",
     "source-map-support": "0.5.21",
-    "text-runner": "6.0.0",
+    "text-runner": "7.1.0",
     "textrun-npm": "0.3.0",
     "ts-node": "10.9.1",
     "typescript": "4.7.4"
