--- a/package.json
+++ b/package.json
@@ -36,11 +36,8 @@
     "@typescript-eslint/parser": "5.34.0",
     "coveralls": "3.1.1",
     "dprint": "0.49.0",
-    "eslint": "8.22.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-import-resolver-typescript": "3.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-typescript-sort-keys": "2.1.0",
+        "eslint": "9.22.0",
+    "eslint-plugin-perfectionist": "4.10.1",
     "memory-streams": "0.1.3",
     "mocha": "10.0.0",
     "npm-check-updates": "17.1.15",
@@ -51,6 +48,7 @@
     "text-runner": "7.1.0",
     "textrun-npm": "0.3.0",
     "ts-node": "10.9.1",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+        "typescript-eslint": "8.26.1"
   }
 }
