--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "tsc -p tsconfig-build.json",
     "clean": "rm -rf dist",
     "coverage": "nyc node_modules/.bin/mocha --require source-map-support/register test/*.ts && nyc report --reporter=text-lcov | node_modules/.bin/coveralls",
-    "docs": "text-runner --offline --format=dot",
+    "docs": "text-runner",
     "fix": "dprint fmt && eslint --ext=.ts --fix .",
     "lint": "eslint --ext=.ts . && dprint check && tsc --noEmit && tools/actionlint",
     "prepublishOnly": "npm run build",
