--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "update": "npm-check-updates -u && npm install"
   },
   "devDependencies": {
+    "@eslint/js": "9.22.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.3",
     "@types/mocha": "9.1.1",
@@ -49,6 +50,6 @@
     "textrun-npm": "0.3.0",
     "ts-node": "10.9.1",
     "typescript": "5.8.2",
-    "typescript-eslint": "8.26.1"
+    "typescript-eslint": "8.25.0"
   }
 }
