--- a/package.json
+++ b/package.json
@@ -28,15 +28,14 @@
     "update": "npm-check-updates -u && npm install"
   },
   "devDependencies": {
-    "@eslint/js": "9.22.0",
+    "@eslint/js": "^9.22.0",
     "@istanbuljs/nyc-config-typescript": "1.0.2",
     "@types/chai": "4.3.3",
     "@types/mocha": "9.1.1",
     "@types/node": "18.7.11",
     "coveralls": "3.1.1",
     "dprint": "0.49.0",
-    "eslint": "9.22.0",
-    "eslint-plugin-perfectionist": "4.10.1",
+    "eslint": "^9.22.0",
     "memory-streams": "0.1.3",
     "mocha": "10.0.0",
     "npm-check-updates": "17.1.15",
@@ -47,7 +46,7 @@
     "text-runner": "7.1.0",
     "textrun-npm": "0.3.0",
     "ts-node": "10.9.1",
-    "typescript": "5.8.2",
-    "typescript-eslint": "8.25.0"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.1"
   }
 }
