--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "textrun-npm": "0.3.0",
     "ts-node": "10.9.1",
     "typescript": "5.8.2",
-    "typescript-eslint": "^8.26.1"
+    "typescript-eslint": "8.26.1"
   }
 }
