ci: Measure test coverage using GitHub Action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,3 +24,5 @@ jobs:
       - run: echo "./node_modules/.bin" >> "$GITHUB_PATH"
       - run: npm run setup
       - run: npm run test
+      - run: npm run coverage
+      - uses: coverallsapp/github-action@v2
